--- a/MIST143_Traveler/Views/CustomerCenter/CommentCreate.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/CommentCreate.cshtml
@@ -30,7 +30,7 @@
                 <img src="~/Images/contact/star2.png" />
                 <img src="~/Images/contact/star2.png" />
                 <img src="~/Images/contact/star2.png" />
-                @*<input asp-for="Star" id="Star" value="@Model.Star" class="form-control" />*@
+                <input id="jaba" value="@Model.OrderId" hidden />
                 <p id="Star"></p>
 
             </div>
