--- a/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
@@ -39,45 +39,58 @@
             </th>
             <th>
             </th>
+            <th>
+            </th>
+
         </tr>
     </thead>
     <tbody id="訂單編號">
         @foreach (var item in Model.訂單)
         {
+            
+        <tr class="樣式">
+            <td>
+                @Html.DisplayFor(modelItem => item.訂單編號)
+            </td>
+            <td>
+                <a type="button" data-bs-toggle="modal" data-bs-target="#ORD" onclick="Odd('@Url.Action("OrderDE", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">@Html.DisplayFor(modelItem => item.商品名稱)</a>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.訂購日期)
+            </td>
+            <td>
 
-            <tr class="樣式">
-                <td>
-                    @Html.DisplayFor(modelItem => item.訂單編號)
-                </td>
-                <td>
-                    <a type="button" data-bs-toggle="modal" data-bs-target="#ORD" onclick="Odd('@Url.Action("OrderDE", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">@Html.DisplayFor(modelItem => item.商品名稱)</a>
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.訂購日期)
-                </td>
-                <td>
-
-                    @Convert.ToInt32(item.購買金額 * item.數量)
-                </td>
-                <td class="statuss" id="stat" value="@item.訂單狀態">
-                    @Html.DisplayFor(modelItem => item.訂單狀態)
-                </td>
-                @{
-                    if (item.訂單狀態 == "訂單完成")
-                    {
-                        <td>
-                            <a class="btn btn-outline-success" id="@item.訂單編號" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="OrderCancel('@Url.Action("CommentCreate", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">我要評論</a>
-                            <a class="btn btn-outline-danger Cancel" id="Cancel" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="OrderCancel('@Url.Action("OrderCancel", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">申請取消</a>
-                        </td>
-                    }
-                    else
-                    {
-                        <td>
-                        </td>
-                    }
+                @Convert.ToInt32(item.購買金額 * item.數量)
+            </td>
+            <td class="statuss" id="stat" value="@item.訂單狀態">
+                @Html.DisplayFor(modelItem => item.訂單狀態)
+            </td>
+            @{
+                if (item.訂單狀態 == "訂單完成" && item.評論狀態 <= 0)
+                {
+                    <td>
+                        <a class="btn btn-outline-success rv" id="@item.訂單編號" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="OrderCancel('@Url.Action("CommentCreate", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">我要評論</a>
+                    </td>
                 }
+                else
+                {
+                    <td>
+                    </td>
+                }
+                if (item.訂單狀態 == "訂單完成")
+                {
+                    <td>
+                        <a class="btn btn-outline-danger Cancel" id="Cancel" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="OrderCancel('@Url.Action("OrderCancel", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">申請取消</a>
+                    </td>
+                }
+                else
+                {
+                    <td>
+                    </td>
+                }
+            }
 
-            </tr>
+        </tr>
         }
     </tbody>
 
@@ -105,25 +118,7 @@
     </div>
 </div>
 
-@*訂單明細用*@
-@*<div class="modal fade" id="ORD" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content d-flex justify-content-center" style="width:1000px">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div id="selectTree" class="ztree" style="height:300px;overflow:auto; ">
 
-
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-</div>*@
 <div id="ORD" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="newstaticBackdrop" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="width:1180px">
@@ -391,18 +386,20 @@
         });
     });
 
+   
+    
+
     function COOM()
     {
+        
         var Cdata=
         {
-            orderId: $("#訂單編號").find("td:eq(0)").text(),
+            OrderId: $("#jaba").val(),
             TravelProductId: $("#CTravelProductID").val(),
             MembersId: $("#CMembersId").val(),
             CommentText: $("#CommentText").val(),
             Star: $("#Star").text(),
         }
-
-
         console.log(Cdata)
         $.ajax({
             url: '@Url.Action("CommentCreate", "CustomerCenter")',
@@ -417,7 +414,7 @@
                         '',
                         'success')
                     $('#exampleModal').modal('hide')
-
+                    
                     $('#cont').load('@Url.Action("Order", "CustomerCenter",new {v.MembersId})')
                 }
             }
@@ -425,10 +422,7 @@
 
     }
 
-    function godetail(i)
-    {
-        console.log(i)
-    }
+    
 
 </script>
 
