--- a/MIST143_Traveler/Views/Shopping/PayData.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayData.cshtml
@@ -9,7 +9,7 @@
 }
 @{ 
     decimal FinallyPrice = 0;
-    for (int i = 0; i <= Model._CShoppingCartDetailViewModel.Count-1; i++)
+    for (int i = 0; i <= Model._CShoppingCartDetailViewModel.Count - 1; i++)
     {
         FinallyPrice += Model._CShoppingCartDetailViewModel[i].TotalPrice;
     }
