--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
 
 
 
-                <a href="https://localhost:44338/Home/Index">後台</a>
+               
             </nav>
             <div class="border-bottom-line"></div>
         </div>
@@ -176,21 +176,21 @@
             <div class="default-footer_copyright">
                 <span>© 2022-2022 MSIT143-第一組.</span>
                 <span>
-                    All Rights Reserved.<br />旅遊產品由艾恩葛朗特旅行社有限公司負責提供
+                    <p>All Rights Reserved.<br />旅遊產品由國際星球旅遊有限公司負責提供</p>
                     旅行業註冊編號：交觀甲第123456789號 品保協會會員編號：西8763號
-                    統一編號：12345678 代表人姓名：川原礫
-                    其他產品由血盟騎士團股份有限公司負責提供 統一編號：87654321
-                    聯繫地址：台北市大安區和平東路二段106號11樓
+                    <p>統一編號：87885678 代表人姓名：王芳芳</p>
+                    <p>其他產品由資展國際股份有限公司負責提供 統一編號：90491745</p>
+                    聯繫地址：台北市大安區復興南路一段390號2樓
                     聯繫電話：02-87638763
                 </span>
             </div>
             <div class="default-footer_internal_links">
                 <div class="default-footer_links">
-                    <span class="footer_label">認識 紅玉宮</span>
+                    <span class="footer_label">認識 PlanetTraveler</span>
                     <ul>
-                        <li>關於茅場晶彥</li>
-                        <li>風林火山公會團</li>
-                        <li>加入牙王</li>
+                        <li>關於我們</li>
+                        <li>星際旅遊元宇宙</li>
+                        <li>加入ISPAN</li>
                     </ul>
                 </div>
                 <div class="default-footer_links">
@@ -200,11 +200,11 @@
                         <li>供應商登入</li>
                         <li>聯合行銷</li>
                         <li>名人合作</li>
-                        <li>分贓&搶劫提案</li>
+                        <li>數位行銷</li>
                     </ul>
                 </div>
                 <div class="default-footer_links">
-                    <span class="footer_label">服務條款</span>
+                    <span class="footer_label">顧客服務條款</span>
                     <ul>
                         <li>服務條款</li>
                         <li>隱私權政策</li>
@@ -215,7 +215,7 @@
             </div>
             <div class="default-footer_others">
                 <span class="footer_label">訂閱電子報，搶先領取下殺4折的隱藏版優惠</span>
-                <p>點擊「訂閱」即表示同意登出人生</p>
+                <p>點擊「訂閱」即表示同意服務條款及隱私權政策</p>
                 <div class="subcribe_email">
                     <input type="text" placeholder="輸入電子信箱" /><button>
                         訂閱
