--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -36,6 +36,7 @@
 <!-- 複製到這邊，下面article刪掉測試用內容，寫入自己的html。注意class名稱不要汙染到全域的html標籤 -->
 <article class="payContainer">
     <form method="post" action="PayEnd" id="payType">
+        <input type="hidden" name="MembersId" value="@Model.MembersId" />
         <input type="hidden" name="PaymethodId" value="1" />
         @for (int i = 0; i < Model._CShoppingCartDetailViewModel.Count; i++)
         {
@@ -160,8 +161,8 @@
                         <div class="leftSide py-3">
                             <div class="infoTitle hasTag">優惠折扣</div>
                             <div class="infoBoxOuter">
+
                                 <div class="infoBoxInner">
-                                    <div class="mb-2 subInfoText">此訂單無適用優惠碼</div>
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" placeholder="輸入優惠碼"
                                                aria-label="Recipient's username" aria-describedby="button-addon2">
