--- a/MIST143_Traveler/Views/Shopping/ShoppingCartSession.cshtml
+++ b/MIST143_Traveler/Views/Shopping/ShoppingCartSession.cshtml
@@ -75,6 +75,7 @@
                             <div class="subInfoText">1件總計 <i class="bi bi-caret-down"></i></div>
                             <div class="titleFontStyle">NT$ <span id="totalPayPrice"></span></div>
                             <form action="PayData" method="post">
+                                <input type="hidden" asp-for="MembersId" value="@Model.MembersId" />
                                 <input type="hidden" asp-for="MemberName" value="@Model.MemberName" />
                                 <input type="hidden" asp-for="Phone" value="@Model.Phone" />
                                 <input type="hidden" asp-for="Email" value="@Model.Email" />
