--- a/MIST143_Traveler/wwwroot/css/travelIndex.css
+++ b/MIST143_Traveler/wwwroot/css/travelIndex.css
@@ -21,11 +21,13 @@
   margin: auto;
 }
 
+
 .main-header .logo {
-  max-width: 70px;
+  max-width: 100px;
+  margin-right:30px;
 }
 .main-header .logo img {
-  width: 100%;
+  width: 130px;
   vertical-align: middle;
 }
 .main-header .main-nav {
@@ -86,7 +88,7 @@
 .secondary-nav {
   width: 1200px;
   height: 50px;
-  margin: auto;
+  margin: 10px auto 0;
 }
 .secondary-nav-container {
   padding: 1px 0.8em;
@@ -112,7 +114,7 @@
 .main-footer {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
+  margin: 30px 0px;
 }
 .default-footer {
   width: 1200px;
@@ -129,7 +131,7 @@
   display: flex;
 }
 .default-footer_links {
-  margin: 0px 40px;
+  margin: 0px 30px;
 }
 .default-footer_links ul,
 .default-footer_links li {
